--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
     app:cardBackgroundColor="@color/lilack"
     app:cardCornerRadius="10dp"
     app:cardElevation="0dp"
