--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -15,13 +15,14 @@
     app:cardPreventCornerOverlap="false"
     app:cardUseCompatPadding="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/clRoot"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/lilack"
         android:layout_margin="10dp"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:backgroundTint="@color/lilack"
+        app:layoutDescription="@xml/item_books_xml_clroot_scene">
 
         <TextView
             android:id="@+id/tvTitle"
@@ -31,26 +32,26 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="32sp"
             android:textStyle="bold"
-            android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvAuthor"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="25dp"
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:textAlignment="textStart"
-            android:textSize="25sp"
             android:textColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
+            android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
         <TextView
@@ -58,10 +59,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="15dp"
-            android:padding="3sp"
+            android:layout_marginEnd="8dp"
             android:ellipsize="end"
+            android:padding="3sp"
             android:textAlignment="textStart"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -69,6 +70,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 
 </androidx.cardview.widget.CardView>
