--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -60,7 +60,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:padding="3sp"
             android:textAlignment="textStart"
@@ -68,7 +67,8 @@
             android:textSize="18sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />
+            app:layout_constraintTop_toBottomOf="@id/tvAuthor"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 
