--- a/app/src/main/res/xml/item_books_xml_clroot_scene.xml
+++ b/app/src/main/res/xml/item_books_xml_clroot_scene.xml
@@ -13,7 +13,22 @@
             motion:targetId="@id/tvDescription" />
     </Transition>
 
-    <ConstraintSet android:id="@+id/start" />
+    <ConstraintSet android:id="@+id/start" >
+        <Constraint
+            android:id="@+id/tvDescription">
+            <CustomAttribute
+                app:attributeName="textSize"
+                app:customFloatValue="18" />
+        </Constraint>
+
+        <Constraint
+            android:id="@+id/tvAuthor">
+            <CustomAttribute
+                app:attributeName="textSize"
+                app:customFloatValue="25" />
+        </Constraint>
+
+    </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
